--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 	<link rel="stylesheet" href="style.css" />
 	<link rel="icon" href="images/favicon.png" />
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-GXRLNTZ9YM"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
-		gtag('config', 'G-XXXXXXXXXX');
+		gtag('config', 'G-GXRLNTZ9YM');
 	</script>
 </head>
 <body>
