--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
 				<li><a href="about.html">About</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
+			<div class="social-links" aria-label="Social and contact links">
+				<a href="https://instagram.com/urbanease.lifestyle" target="_blank" rel="noopener noreferrer" title="Instagram: urbanease.lifestyle" aria-label="Instagram">
+					<!-- Instagram icon -->
+					<svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+						<rect x="3" y="3" width="18" height="18" rx="5" stroke="currentColor" stroke-width="1.6"/>
+						<circle cx="12" cy="12" r="4.2" stroke="currentColor" stroke-width="1.6"/>
+						<circle cx="17.35" cy="6.65" r="1.2" fill="currentColor"/>
+					</svg>
+					<span class="sr-only">@urbanease.lifestyle</span>
+				</a>
+				<a href="mailto:gettheurbanease@gmail.com" title="Email: gettheurbanease@gmail.com" aria-label="Email">
+					<!-- Mail icon -->
+					<svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+						<rect x="3" y="5" width="18" height="14" rx="2.5" stroke="currentColor" stroke-width="1.6"/>
+						<path d="M4 7l8 6 8-6" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+					</svg>
+					<span class="sr-only">gettheurbanease@gmail.com</span>
+				</a>
+			</div>
 		</nav>
 	</header>
 
