Add X handle to header socials

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 					</svg>
 					<span class="sr-only">@urbanease.lifestyle</span>
 				</a>
+				<a href="https://x.com/AkshatGarg63055" target="_blank" rel="noopener noreferrer" title="X (Twitter): @AkshatGarg63055" aria-label="X (Twitter)">
+					<!-- X (Twitter) icon -->
+					<svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+						<path d="M6 5h3l3 4 3-4h3l-4.5 6L21 19h-3l-3.5-4.5L11 19H8l4.5-6L6 5z" fill="currentColor"/>
+					</svg>
+					<span class="sr-only">@AkshatGarg63055 on X</span>
+				</a>
 				<a href="mailto:gettheurbanease@gmail.com" title="Email: gettheurbanease@gmail.com" aria-label="Email">
 					<!-- Mail icon -->
 					<svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true">
