Add cart showcase and footer socials

--- a/index.html
+++ b/index.html
@@ -117,6 +117,49 @@
 			</ul>
 		</section>
 
+		<section class="container cart-showcase" aria-labelledby="cart-title">
+			<header class="cart-header">
+				<p class="badge">New</p>
+				<h2 id="cart-title">Add-to-cart friendly picks</h2>
+				<p>Handpicked essentials you can drop into your cart for an instant home retreat.</p>
+			</header>
+			<div class="cart-grid" role="list">
+				<article class="cart-card" role="listitem">
+					<img src="https://images.unsplash.com/photo-1506224772185-87b1f01fd0cc?auto=format&fit=crop&w=900&q=80" alt="Amber glass candle on a marble tray with matches beside it" />
+					<div class="cart-details">
+						<h3>Midnight Amber Candle</h3>
+						<p>Slow-burn soy blend with calm, smoky notes for winding down.</p>
+						<div class="cart-meta">
+							<span class="cart-price">₹1,299</span>
+							<button class="btn btn-secondary btn-cart" type="button">Add to cart</button>
+						</div>
+					</div>
+				</article>
+				<article class="cart-card" role="listitem">
+					<img src="https://images.unsplash.com/photo-1470337458703-46ad1756a187?auto=format&fit=crop&w=900&q=80" alt="Minimal wellness kit with essential oils, dropper bottle and towel" />
+					<div class="cart-details">
+						<h3>Balance Wellness Kit</h3>
+						<p>Daily essential oils and a grounding mist for mindful breaks.</p>
+						<div class="cart-meta">
+							<span class="cart-price">₹1,899</span>
+							<button class="btn btn-secondary btn-cart" type="button">Add to cart</button>
+						</div>
+					</div>
+				</article>
+				<article class="cart-card" role="listitem">
+					<img src="https://images.unsplash.com/photo-1505751172876-fa1923c5c528?auto=format&fit=crop&w=900&q=80" alt="Stone water bottle and yoga mat rolled on the floor" />
+					<div class="cart-details">
+						<h3>Urban Flow Kit</h3>
+						<p>Grip yoga mat plus insulated flask for studio-to-street days.</p>
+						<div class="cart-meta">
+							<span class="cart-price">₹2,499</span>
+							<button class="btn btn-secondary btn-cart" type="button">Add to cart</button>
+						</div>
+					</div>
+				</article>
+			</div>
+		</section>
+
 		<section class="container" style="margin-bottom:64px;">
 			<div class="content" style="display:flex; align-items:center; justify-content:space-between; gap:16px; flex-wrap:wrap;">
 				<div>
@@ -126,6 +169,26 @@
 				<div style="display:flex; gap:10px;">
 					<a href="explore.html" class="btn btn-primary">Explore now</a>
 					<a href="contact.html" class="btn btn-secondary">Get in touch</a>
+				</div>
+			</div>
+		</section>
+
+		<section class="container home-social" aria-labelledby="connect-title">
+			<div>
+				<p class="home-social-caption" id="connect-title">City stories continue online—follow us for daily drops.</p>
+				<div class="home-social-links" aria-label="Social media handles">
+					<a href="https://instagram.com/urbanease.lifestyle" target="_blank" rel="noopener noreferrer">
+						<span>@urbanease.lifestyle</span>
+						<small>Instagram</small>
+					</a>
+					<a href="https://x.com/AkshatGarg63055" target="_blank" rel="noopener noreferrer">
+						<span>@AkshatGarg63055</span>
+						<small>X (Twitter)</small>
+					</a>
+					<a href="mailto:gettheurbanease@gmail.com">
+						<span>gettheurbanease@gmail.com</span>
+						<small>Email</small>
+					</a>
 				</div>
 			</div>
 		</section>
