Adding the cart section in the header

--- a/cart.html
+++ b/cart.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>About | UrbanEase</title>
-	<meta name="description" content="UrbanEase is a lifestyle discovery platform inspired by Zomato and CRED, built for modern urban living." />
-	<meta name="keywords" content="About UrbanEase, lifestyle platform, Zomato inspired, CRED inspired" />
+	<title>My Cart | UrbanEase</title>
+	<meta name="description" content="Review and manage the items and services you want to book or purchase on UrbanEase." />
+	<meta name="keywords" content="cart, booking, checkout, UrbanEase" />
 	<meta name="author" content="UrbanEase" />
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,8 +29,8 @@
 			<ul class="nav-links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="explore.html">Explore</a></li>
-				<li><a href="cart.html">My Cart <span class="cart-count-badge" data-cart-count>0</span></a></li>
-				<li><a class="active" href="about.html">About</a></li>
+				<li><a class="active" href="cart.html">My Cart <span class="cart-count-badge" data-cart-count>0</span></a></li>
+				<li><a href="about.html">About</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
@@ -38,43 +38,29 @@
 
 	<main class="container">
 		<header class="page-header">
-			<h1>About UrbanEase</h1>
-			<p>A lifestyle discovery platform inspired by Zomato and CRED.</p>
+			<h1>My Cart</h1>
+			<p>Review, add, or delete items and services before you book or purchase.</p>
 		</header>
 
-		<section class="content about-grid">
-			<section>
-				<h2>Our Story</h2>
-				<p>UrbanEase was born out of a simple insight: city living should feel inspiring, not overwhelming. We loved the curation of Zomato and the premium feel of CRED, so we combined the best of both worlds into one dark, modern experience that celebrates every kind of urban explorer.</p>
-			</section>
-
-			<section>
-				<h2>What We Deliver</h2>
-				<ul>
-					<li>Editorially curated lists that spotlight restaurants, fitness studios, salons, and specialty services.</li>
-					<li>Context-rich highlights—photos, descriptions, and quick actions—designed for people on the go.</li>
-					<li>Personalized touchpoints such as the UrbanEase chatbot and responsive design for every screen.</li>
-				</ul>
-			</section>
-
-			<section>
-				<h2>UrbanEase Mission</h2>
-				<p>To empower urban communities to discover and enjoy the best of their city with simplicity, trust, and style. We keep things gender-neutral, accessible, and friendly so anyone can plan their next outing or routine with confidence.</p>
-			</section>
-
-			<section>
-				<h2>Core Values</h2>
-				<ul>
-					<li><strong>Clarity:</strong> Less noise, more meaningful choices.</li>
-					<li><strong>Credibility:</strong> Partnering with verified brands and community feedback.</li>
-					<li><strong>Care:</strong> Experiences that nurture wellness, connection, and joy.</li>
-				</ul>
-			</section>
+		<section class="cart-page">
+			<div class="cart-main">
+				<p id="cart-empty" class="cart-empty">Your cart is empty. Explore categories to start adding items.</p>
+				<ul id="cart-items" class="cart-items" aria-label="Cart items"></ul>
+			</div>
+			<aside class="cart-summary">
+				<h2>Summary</h2>
+				<div class="cart-summary-row">
+					<span>Total</span>
+					<strong id="cart-total">₹0</strong>
+				</div>
+				<a href="explore.html" class="btn btn-secondary" style="width:100%; margin-top:12px;">Continue Exploring</a>
+				<button type="button" class="btn btn-primary" style="width:100%; margin-top:8px;" onclick="alert('Checkout flow coming soon!')">Proceed to Checkout</button>
+			</aside>
 		</section>
 	</main>
 
 	<footer class="site-footer">
-		<p>© <span id="year"></span> UrbanEase • Inspired by modern urban life</p>
+		<p>© <span id="year"></span> UrbanEase • Explore the smarter side of city living</p>
 	</footer>
 
 	<!-- Chatbot -->
