--- a/fitness.html
+++ b/fitness.html
@@ -29,6 +29,7 @@
 			<ul class="nav-links">
 				<li><a href="index.html">Home</a></li>
 				<li><a class="active" href="explore.html">Explore</a></li>
+				<li><a href="cart.html">My Cart <span class="cart-count-badge" data-cart-count>0</span></a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
@@ -50,6 +51,14 @@
 						<h3>Gym Memberships</h3>
 						<p>Full-access memberships to premium gyms with state-of-the-art equipment, locker facilities, and group classes.</p>
 						<div class="price-range">₹1,999 – ₹4,999</div>
+						<button
+							class="btn btn-secondary btn-add-to-cart"
+							type="button"
+							data-id="fit-gym-membership"
+							data-name="Gym Membership"
+							data-price="2999"
+							data-category="Fitness"
+						>Add to cart</button>
 					</div>
 				</article>
 
@@ -59,6 +68,14 @@
 						<h3>Yoga Classes</h3>
 						<p>Mindful movement sessions including Hatha, Vinyasa, and Ashtanga. Suitable for all levels from beginners to advanced.</p>
 						<div class="price-range">₹800 – ₹2,500</div>
+						<button
+							class="btn btn-secondary btn-add-to-cart"
+							type="button"
+							data-id="fit-yoga-classes"
+							data-name="Yoga Classes"
+							data-price="1200"
+							data-category="Fitness"
+						>Add to cart</button>
 					</div>
 				</article>
 
@@ -68,6 +85,14 @@
 						<h3>Zumba</h3>
 						<p>High-energy dance fitness classes combining Latin and international music. Fun, effective cardio workouts for all ages.</p>
 						<div class="price-range">₹600 – ₹1,800</div>
+						<button
+							class="btn btn-secondary btn-add-to-cart"
+							type="button"
+							data-id="fit-zumba"
+							data-name="Zumba Session"
+							data-price="900"
+							data-category="Fitness"
+						>Add to cart</button>
 					</div>
 				</article>
 
@@ -77,6 +102,14 @@
 						<h3>Personal Training</h3>
 						<p>One-on-one sessions with certified trainers. Customized workout plans tailored to your goals, fitness level, and schedule.</p>
 						<div class="price-range">₹1,500 – ₹3,500</div>
+						<button
+							class="btn btn-secondary btn-add-to-cart"
+							type="button"
+							data-id="fit-personal-training"
+							data-name="Personal Training"
+							data-price="2500"
+							data-category="Fitness"
+						>Add to cart</button>
 					</div>
 				</article>
 
@@ -86,6 +119,14 @@
 						<h3>Outdoor Bootcamps</h3>
 						<p>Intensive group training sessions in parks and open spaces. Functional movements, HIIT, and team challenges.</p>
 						<div class="price-range">₹499 – ₹1,500</div>
+						<button
+							class="btn btn-secondary btn-add-to-cart"
+							type="button"
+							data-id="fit-bootcamps"
+							data-name="Outdoor Bootcamp"
+							data-price="999"
+							data-category="Fitness"
+						>Add to cart</button>
 					</div>
 				</article>
 
@@ -95,6 +136,14 @@
 						<h3>Pilates & Core</h3>
 						<p>Low-impact strength training focusing on core stability, flexibility, and posture. Mat and equipment-based classes available.</p>
 						<div class="price-range">₹700 – ₹2,200</div>
+						<button
+							class="btn btn-secondary btn-add-to-cart"
+							type="button"
+							data-id="fit-pilates-core"
+							data-name="Pilates & Core"
+							data-price="1500"
+							data-category="Fitness"
+						>Add to cart</button>
 					</div>
 				</article>
 			</div>
@@ -108,7 +157,14 @@
 					<h3>Annual Gym Membership</h3>
 					<p>Get 12 months of unlimited access to premium facilities, group classes, and personal training discounts. Save 30% compared to monthly plans.</p>
 					<div class="offer-price">₹24,999 <span class="offer-original">₹35,988</span></div>
-					<a href="contact.html" class="btn btn-primary">Book Now</a>
+					<button
+						class="btn btn-primary btn-add-to-cart"
+						type="button"
+						data-id="offer-annual-gym"
+						data-name="Annual Gym Membership"
+						data-price="24999"
+						data-category="Fitness Offer"
+					>Add to cart</button>
 				</article>
 
 				<article class="offer-card">
@@ -116,7 +172,14 @@
 					<h3>One-Day Gym Trial</h3>
 					<p>Experience our facilities with a full-day pass. Includes access to all equipment, group classes, and locker facilities. No commitment required.</p>
 					<div class="offer-price">₹499 <span class="offer-original">₹800</span></div>
-					<a href="contact.html" class="btn btn-primary">Book Now</a>
+					<button
+						class="btn btn-primary btn-add-to-cart"
+						type="button"
+						data-id="offer-gym-trial"
+						data-name="One-Day Gym Trial"
+						data-price="499"
+						data-category="Fitness Offer"
+					>Add to cart</button>
 				</article>
 
 				<article class="offer-card">
@@ -124,7 +187,14 @@
 					<h3>Personal Training Package</h3>
 					<p>10 sessions with a certified personal trainer. Includes fitness assessment, customized plan, and nutrition guidance. Perfect for beginners.</p>
 					<div class="offer-price">₹12,999 <span class="offer-original">₹17,500</span></div>
-					<a href="contact.html" class="btn btn-primary">Book Now</a>
+					<button
+						class="btn btn-primary btn-add-to-cart"
+						type="button"
+						data-id="offer-pt-package"
+						data-name="Personal Training Package"
+						data-price="12999"
+						data-category="Fitness Offer"
+					>Add to cart</button>
 				</article>
 			</div>
 		</section>
@@ -160,6 +230,7 @@
 	</div>
 
 	<script src="chatbot.js" defer></script>
+	<script src="cart.js" defer></script>
 	<script>
 		document.getElementById('year').textContent = new Date().getFullYear();
 	</script>
